--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Fiction'
 - !lcc 'PQ'
+- GITenberg
 title: La testa della vipera
 url: http://www.gutenberg.org/ebooks/26452
